[package]
name = "esplugin"
version = "0.1.0"
authors = ["Adam-Gleave <adamg108@hotmail.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.2.1"
byteorder = "1"
lazy_static = "0.1.4"
num = "0.3"
num-derive = "0.3.2"
num-traits = "0.2.12"