[package]
name = "editor"
version = "0.1.0"
authors = ["Adam Gleave"]
edition = "2018"

[dependencies]
imgui = "0.5.0"
imgui-glium-renderer = "0.5.0"
imgui-winit-support = "0.5.0"
glium = { version = "0.27", default-features = true }
session = { path = "../session" }
tes-parser = { path = "../tes-parser" }