[package]
name = "editor"
version = "0.1.0"
authors = ["Adam Gleave"]
edition = "2018"

[dependencies]
imgui = { path = "../../extern/imgui" }
imgui-glium-renderer = { path = "../../extern/imgui/imgui-glium-renderer" }
imgui-winit-support = { path = "../../extern/imgui/imgui-winit-support" }
glium = { version = "0.27", default-features = true }
session = { path = "../session" }
tes-parser = { path = "../tes-parser" }